# larevt

./: CMakeLists.txt
CalData/: CMakeLists.txt  CalGausHFDUNE10kt_module.cc.sample  CalGausHFDUNE35t_module.cc.sample  CalGausHFLBNE10kt_module.cc.sample  CalGausHFLBNE35t_module.cc.sample  CalWireAna_module.cc  CalWireDUNE10kt_module.cc.sample  CalWireDUNE35t_module.cc.sample  CalWireT1034_module.cc  CalWireT962_module.cc  CalWire_module.cc  DeconvGausHFDUNE10kt_module.cc.sample  DeconvGausHFDUNE35t_module.cc.sample  DeconvGausHFLBNE10kt_module.cc.sample  DeconvGausHFLBNE35t_module.cc.sample  DumpWires_module.cc  GNUmakefile  caldata.fcl  caldata_bo.fcl  caldata_dune.fcl.sample  caldata_lariat.fcl  dump_all_wires.fcl  dump_good_wires.fcl  dump_wires.fcl
CalData/test/: CMakeLists.txt  FFTTest_module.cc  ffttest_argoneut.fcl  simwire_argoneut.fcl
CalibrationDBI/: .gitignore  CMakeLists.txt  README
CalibrationDBI/IOVData/: CMakeLists.txt  ChData.cxx  ChData.h  ChannelStatus.h  DetPedestal.h  IOVDataConstants.h  IOVDataError.cxx  IOVDataError.h  IOVTimeStamp.cxx  IOVTimeStamp.h  Snapshot.cxx  Snapshot.h  TimeStampDecoder.cxx  TimeStampDecoder.h  UtilFunc.cxx  UtilFunc.h
CalibrationDBI/IOVData/arxiv/: SnapshotCollection.cxx  SnapshotCollection.h
CalibrationDBI/Interface/: CalibrationDBIFwd.h  ChannelStatusService.h  IChannelFilterProvider.h  IChannelFilterService.h  IChannelStatusProvider.h  IChannelStatusService.h  IDetPedestalProvider.h  IDetPedestalService.h  IPmtGainService.h
CalibrationDBI/LArBackend/: CMakeLists.txt  WebReaderService.h  WebReaderService_service.cc  WebReaderTest_module.cc
CalibrationDBI/LArBackend/job/: database_standard.fcl  webreader_test.fcl
CalibrationDBI/Providers/: CMakeLists.txt  DBFolder.cxx  DBFolder.h  DatabaseRetrievalAlg.cxx  DatabaseRetrievalAlg.h  DetPedestalRetrievalAlg.cxx  DetPedestalRetrievalAlg.h  SIOVChannelFilterProvider.cxx  SIOVChannelFilterProvider.h  SIOVChannelStatusProvider.cxx  SIOVChannelStatusProvider.h  SIOVPmtGainProvider.cxx  SIOVPmtGainProvider.h  WebDBIConstants.h  WebError.h
CalibrationDBI/Services/: CMakeLists.txt  IDetPedestalService.h  SIOVChannelFilterService_service.cc  SIOVChannelStatusService_service.cc  SIOVDetPedestalService.h  SIOVDetPedestalService_service.cc  SIOVPmtGainService_service.cc
CalibrationDBI/WebDBI/: CMakeLists.txt  DBFolder.cxx  DBFolder.h  DatabaseRetrievalAlg.h  DetPedestalRetrievalAlg.cxx  DetPedestalRetrievalAlg.h  SIOVDetPedestalService.h  SIOVDetPedestalService_service.cxx  WDAConnInfo.cxx  WDAConnInfo.h  WebDBIConstants.h  WebError.cxx  WebReader.cxx  WebReader.h
CalibrationDBI/WebDBI/job/: webreader.fcl
Filters/: ADCFilter_module.cc  CMakeLists.txt  ChannelFilter.cxx  ChannelFilter.h  ChannelFilterBaseInterface.h  ChannelFilterServiceInterface.h  EmptyFilter_module.cc  FilterPrimaryPDG_module.cc  GNUmakefile  MuonFilter_module.cc  SimpleChannelFilter.cpp  SimpleChannelFilter.h  SimpleChannelFilterService.h  SimpleChannelFilterService_service.cc  SimpleChannelStatus.h  SimpleChannelStatusService.h  SimpleChannelStatusService_service.cc  SmallClusterFilter_module.cc  channelfilter.fcl  channelfilter_argoneut.fcl  channelfilter_bo.fcl  channelfilter_microboone.fcl  channelstatus.fcl  channelstatus_argoneut.fcl  channelstatus_bo.fcl  filters.fcl  filters_argoneut.fcl
SpaceCharge/: CMakeLists.txt  SpaceCharge.h  spacecharge.fcl
larevt/: CMakeLists.txt
larevt/CalData/: CMakeLists.txt  CalWireAna_module.cc  CalWireT962_module.cc  CalWire_module.cc  DumpWires_module.cc  caldata.fcl  caldata_argoneut.fcl  dump_all_wires.fcl  dump_good_wires.fcl
larevt/CalData/test/: CMakeLists.txt  FFTTest_module.cc  ffttest_argoneut.fcl  simwire_argoneut.fcl
larevt/CalibrationDBI/: CMakeLists.txt  README
larevt/CalibrationDBI/IOVData/: CMakeLists.txt  CalibrationExtraInfo.cxx  CalibrationExtraInfo.h  ChData.h  ChannelStatus.h  DetPedestal.h  ElectronLifetimeContainer.h  ElectronicsCalib.h  IOVDataConstants.h  IOVDataError.h  IOVTimeStamp.cxx  IOVTimeStamp.h  PmtGain.h  Snapshot.h  TimeStampDecoder.cxx  TimeStampDecoder.h
larevt/CalibrationDBI/Interface/: CalibrationDBIFwd.h  ChannelStatusProvider.h  ChannelStatusService.h  DetPedestalProvider.h  DetPedestalService.h  ElectronLifetimeProvider.h  ElectronLifetimeService.h  ElectronicsCalibProvider.h  ElectronicsCalibService.h  IChannelStatusProvider.h  IChannelStatusService.h  IDetPedestalProvider.h  IPmtGainProvider.h  PmtGainProvider.h  PmtGainService.h
larevt/CalibrationDBI/LArBackend/: CMakeLists.txt  WebReaderService.h  WebReaderService_service.cc  WebReaderTest_module.cc
larevt/CalibrationDBI/LArBackend/job/: database_standard.fcl  webreader.fcl  webreader_test.fcl
larevt/CalibrationDBI/Providers/: CMakeLists.txt  DBDataset.cpp  DBDataset.cxx  DBDataset.h  DBFolder.cxx  DBFolder.h  DatabaseRetrievalAlg.cxx  DatabaseRetrievalAlg.h  DetPedestalRetrievalAlg.cxx  DetPedestalRetrievalAlg.h  SIOVChannelStatusProvider.cxx  SIOVChannelStatusProvider.h  SIOVElectronicsCalibProvider.cxx  WebDBIConstants.h  (+4 more)
larevt/Filters/: ADCFilter_module.cc  CMakeLists.txt  ChannelFilter.cxx  ChannelFilter.h  EmptyFilter_module.cc  EventFilter_module.cc  EventTimeFilter_module.cc  FinalStateParticleFilter_module.cc  FinalStateSelectFilter_module.cc  LArG4ParticleFilter_module.cc  MuonFilter_module.cc  SimpleChannelStatus.cpp  SimpleChannelStatus.h  SimpleChannelStatusService.h  SimpleChannelStatusService_service.cc  SmallClusterFilter_module.cc  filters.fcl  larg4particlefilter.fcl  mufilter.fcl  run_larg4particlefilter.fcl
larevt/SpaceCharge/: CMakeLists.txt  SpaceCharge.h  SpaceChargeStandard.cxx  SpaceChargeStandard.h  SpaceCharge_service.cc  spacecharge.fcl
larevt/SpaceChargeServices/: CMakeLists.txt  SpaceChargeService.h  SpaceChargeServiceStandard.h  SpaceChargeServiceStandard_service.cc
test/: CMakeLists.txt
test/Filters/: CMakeLists.txt  SimpleChannelFilterTest_module.cc  SimpleChannelFilter_test.cxx  SimpleChannelStatusTest_module.cc  SimpleChannelStatus_test.cxx  test_channel_filter.fcl  test_channel_status.fcl
ups/: product_deps
(+5 files in other folders)
